@@ -25,7 +25,7 @@ var scriptHost = (function deriveScriptHost() {
 // * Except otherwise noted, RaccoonTip is licensed under
 // * http://creativecommons.org/licenses/by-sa/3.0
 // *
-// * $Date: 2010-08-28 15:28:32 +0100 (Sat, 28 August 2010) $
+// * $Date: 2010-08-28 16:03:39 +0100 (Sat, 28 August 2010) $
 // *
 
 RaccoonTip = (function() {
@@ -36,7 +36,8 @@ RaccoonTip = (function() {
   var displaying = false, mouseover = false;
   
   var register = function(target, content, options) {
-    $(target).live((options || {}).event || "click", function(event) {
+    var attachFunction = $.inArray(options.event || default_options.event, ["focus"]) == -1 ? "live" : "bind";
+    $(target)[attachFunction]((options || {}).event || "click", function(event) {
       event.preventDefault();
       display(event.target, content, options);
     });
