@@ -3,6 +3,7 @@
 == Version 1.0.1 (August 28, 2010)
 
 * Auto-correcting the position of the RaccoonTip when it will be displayed outside the viewport if not correcting
+* Auto-determining whether to use "live" or "bind" within RaccoonTip.register()
 
 == Version 1.0.0 (August 28, 2010)
 
